2008-04-30  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkevents-quartz.c:
	(get_keyboard_modifiers_from_ns_event), (create_key_event): Map
	Alt to Alt and Cmd to Meta. This is not only more logical but also
	makes it easier to have Mac-like behavior.

2008-04-25  Björn Lindqvist  <bjourne@gmail.com>

	* gtk/gtkentry.c: (gtk_entry_expose) Use existing window size when
	painting the flat box instead of recalculating it. (#437493,
	Ricardo Cruz)

2008-04-25  Michael Emmel  <mike.emmel@gmail.com>

	Bug 529841 – incorrect position in directfb 

	* gdk/directfb/gdkwindow-directfb.c: fix y = abs_x 

2008-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkwidget.h: include <atk/atk.h> instead of <atk/atkobject.h>

2008-04-25  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkprintcontext.h: include <pango/pango.h> instead of
	<pango/pango-layout.h>.

	* gtk/gtkiconfactory.c
	* gtk/gtkimmodule.c
	* gtk/gtkmain.c
	* gtk/gtkmodules.c
	* gtk/queryimmodules.c: remove inclusion of single files from
	pango, none of them was actually needed.

	* modules/input/gtkimcontextime.c: include <pango/pango.h> instead of
	<pango/pango-utils.h>.

2008-04-25  Michael Natterer  <mitch@imendio.com>

	* gdk/gdkfont.h: include <pango/pango.h> instead of
	<pango/pango-font.h>.

2008-04-25  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkmountoperation.h: include <gdk/gdk.h> instead of
	<gdk/gdkscreen.h>.

2008-04-21  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkselection.c: add tons of g_return_if_fail() instead of
	crashing when NULL pointers get passed.

2008-04-18  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkenums.h: move a few '{' to their own lines so all enums
	here have the same style.

2008-04-18  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkicontheme.h
	* gtk/gtkrecentmanager.h: include <gdk/gdk.h> instead of
	<gdk/gdkscreen.h>.

	* gtk/gtkbuilderparser.c
	* gtk/gtklinkbutton.c
	* gtk/gtkpreview.c
	* gtk/gtkrecentchooserdefault.c
	* gtk/gtkrecentchoosermenu.c